# segemehl-visual

./: CMakeLists.txt  README.md  chipboard-cli.cpp  chipboard.cpp  chipboard.h  chipboard.kdev4  eps_header.h  genome.cpp  genome.h  linplot.cpp  linplot.h  linplot2.cpp  linplot2.h  lockfreequeue.h  main.cpp  plot.cpp  plot.h  plotchromosome.cpp  plotchromosome.h  plotchromosome2.cpp  plotchromosome2.h  plotnode.h  readcontainer.cpp  readcontainer.h  readme.md  roadmap.mm  sync-me.sh  tests.cpp  utils.cpp  utils.h  vplot.cpp  vplot.h  vplot2.cpp  vplot2.h
report/: .#foo  algo.org  algo.org~  algo.tex  algo.tex~  bibliography.bib  plotcommands  real.eps  references.bib  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.loa  report.lof  report.org  report.tex  report.tex~  report_backup.org  rnas.eps  times.csv  tree2.eps
sugiyama/: coffman-graham.py  sugiyama.py  sugiyama.py~
talk/: beamer-like.js  cb2.html  cb2.html~  cb2.org  cb2.tex  cb2.tex~  reveal.js  test.org  test.org~  test.tex  test.tex~
talk/cb2/: full.graphml  new.eps0.eps
